# thenairn-til

./: .dockerignore  .drone.yml  .gitignore  Caddyfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.nextjs  Dockerfile.nextjs.dockerignore  Dockerfile.storybook  Dockerfile.storybook.dockerignore  caddy.Dockerfile  codegen.yml  docker-compose.yml  frontend.Dockerfile  next.config.js  package-lock.json  package.json  storybook.Dockerfile  tsconfig.json  workspace.code-workspace
.storybook/: config.js  webpack.config.js
backend/: .gitignore  BUILD.bazel  WORKSPACE  codegen.yml  docker-compose.local.yml  init-mongo.sh  mongo-init.local.js  package.json  tsconfig.json
backend/src/: auth.ts  dotenv.ts  environment.ts  index.ts
backend/src/database/: tag.ts  til.ts  user.ts
backend/src/graphql/: schema.ts
backend/src/graphql/resolvers/: index.ts  tag.ts  til.ts  user.ts
backend/src/graphql/schemas/: index.ts  tag.graphql  til.graphql  user.graphql
bundles/: client.html
components/: til.js
components/CategoryIcon/: CategoryIcon.js
components/Gists/: index.tsx
components/Til/: Til.js  Til.scss  Til.tsx
components/framework/: base.ts  globals.js  globals.ts  minireset.ts  theme.js  theme.ts  utils.js  utils.ts
components/framework/elements/: Box.js  Button.ts  Hero.js  Icon.js  Icon.ts  Text.js  Text.ts  WorldMap.tsx
docker/caddy/: Caddyfile
docker/nextjs/: .dockerignore  Dockerfile
docker/storybook/: .dockerignore  Dockerfile
frontend/: .gitignore  codegen.yml  next.config.js  package.json  tsconfig.json
frontend/.storybook/: config.js
frontend/components/Til/: Til.tsx
frontend/documents/: me.graphql  register.graphql  tag-search.graphql
frontend/framework/: theme.ts  utils.ts
frontend/lib/: apollo.tsx  cookie-auth.ts  redirect-unauthenticated.ts  ssr-redirects.ts
frontend/pages/: _app.tsx  _document.tsx  index.old.tsx  index.tsx  loggedin.tsx  login.tsx  register.tsx
graphql_schemas/: BUILD.bazel  WORKSPACE  package.json  tsconfig.json
graphql_schemas/schemas/: user.graphql
pages/: _app.js  _app.tsx  _document.js  _document.tsx  home.js  index.js  index.tsx
schemas/: WORKSPACE  package.json
styles/: bulma.scss
typings/: react-syntax-highlighter.d.ts
vscode-ext/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  codegen.yml  gulpfile.ts  package.json  tsconfig.json  webpack.config.js
vscode-ext/gulp/: copy-assets.gulp.ts  merge-package-json.gulp.ts  paths.ts
vscode-ext/src/: auth.ts  extension.ts  icons.ts  logger.ts  state.ts
vscode-ext/types/: assets.d.ts  fetch.d.ts
(+34 files in other folders)
